--- a/src/app/user-dashboard/containers/user-submit/user-submit.component.html
+++ b/src/app/user-dashboard/containers/user-submit/user-submit.component.html
@@ -5,13 +5,13 @@
 
     <button
         type="button"
-        (click)="goToCreateTransaction()">
+        (click)="goToUserCreate()">
         Create transaction
     </button>
 
     <button
         type="button"
-        (click)="goToTransactionInfo()">
+        (click)="goToUserView()">
         Transaction Info
     </button>
 
