--- a/src/app/user-dashboard/components/user-display/user-display.component.html
+++ b/src/app/user-dashboard/components/user-display/user-display.component.html
@@ -13,27 +13,27 @@
              <tbody>
              <tr>
                  <th scope="row">User Id</th>
-                 <td>{{ detail?.response?.resultOne?.id || null }}</td>
+                 <td>{{ detail?.id || null }}</td>
              </tr>
              <tr>
                  <th scope="row">First name</th>
-                 <td>{{ detail?.response?.resultOne?.first_name || null }}</td>
+                 <td>{{ detail?.first_name || null }}</td>
              </tr>
              <tr>
                  <th scope="row">Last name</th>
-                 <td>{{ detail?.response?.resultOne?.last_name || null }}</td>
+                 <td>{{ detail?.last_name || null }}</td>
              </tr>
              <tr>
                  <th scope="row">E-mail</th>
-                 <td>{{ detail?.response?.resultOne?.email || null }}</td>
+                 <td>{{ detail?.email || null }}</td>
              </tr>
              <tr>
                  <th scope="row">Created at</th>
-                 <td>{{ detail?.response?.resultOne?.created_at || null }}</td>
+                 <td>{{ detail?.created_at || null }}</td>
              </tr>
              <tr>
                  <th scope="row">Updated at</th>
-                 <td>{{ detail?.response?.resultOne?.updated_at || null }}</td>
+                 <td>{{ detail?.updated_at || null }}</td>
              </tr>
              </tbody>
          </table>
