--- a/src/app/user-dashboard/containers/registration/registration.component.html
+++ b/src/app/user-dashboard/containers/registration/registration.component.html
@@ -12,10 +12,10 @@
         &lsaquo; Go back
     </button>
 
-    <registration-form
+    <sign-up-form
         [detail]="registration"
         [registrationError]="registrationError"
         (update)="onRegistration($event)">
 
-    </registration-form>
+    </sign-up-form>
 </div>
