--- a/src/app/user-dashboard/containers/user-navigation/user-navigation.component.html
+++ b/src/app/user-dashboard/containers/user-navigation/user-navigation.component.html
@@ -11,6 +11,12 @@
 
     <button
         type="button"
+        (click)="goToUserLogin()">
+        Create transaction
+    </button>
+
+    <button
+        type="button"
         (click)="goToUserView()">
         Transaction Info
     </button>
