--- a/src/app/user-dashboard/components/sign-in-form/sign-in-form.component.html
+++ b/src/app/user-dashboard/components/sign-in-form/sign-in-form.component.html
@@ -51,7 +51,7 @@
             </div>
         </div>
     </div>
-    <div class="text-danger">{{ infoError }}</div>
+    <div class="text-danger">{{ signInError }}</div>
 
     <div class="form-group">
         <button
