User navigation menu

--- a/src/app/transaction-dashboard/containers/transaction-dashboard/transaction-dashboard.component.html
+++ b/src/app/transaction-dashboard/containers/transaction-dashboard/transaction-dashboard.component.html
@@ -9,7 +9,7 @@
         <h4 class="alert-heading">Not developed yet.</h4>
         <p class="mb-3">Multiple transactions reports are not developed yet. Please, go to:
             <a
-                href="{{ links.transactionSubmitHome }}"
+                href="{{ links.userHome }}"
                 class="card-link">
                 Single transaction operations
             </a>
