--- a/src/app/user-dashboard/containers/view/view.component.html
+++ b/src/app/user-dashboard/containers/view/view.component.html
@@ -13,13 +13,32 @@
         </button>
     </span>
 
-    <h3>Single User Info</h3>
-    <search-form
-        [detail]="userData"
-        [searchError]="searchError"
-        (update)="onGetInfo($event)">
+    <div>
+        <span>
+            <button
+                class="btn btn-outline-info ml-3"
+                (click)="viewAllUsers()">
+                &lsaquo; View all users
+            </button>
+        </span>
+        <span>
+            <button
+                class="btn btn-outline-info ml-3"
+                (click)="searchByUserName()">
+                &lsaquo; Search by user name
+            </button>
+        </span>
+    </div>
 
-    </search-form>
+    <div *ngIf="action==='search_by_user_name'">
+        <h3>Single User Info</h3>
+        <search-form
+            [detail]="userData"
+            [searchError]="searchError"
+            (update)="onGetInfo($event)">
+
+        </search-form>
+    </div>
 
     <!-- {{ response | json }} -->
 
