--- a/src/app/user-dashboard/containers/sign-in/sign-in.component.html
+++ b/src/app/user-dashboard/containers/sign-in/sign-in.component.html
@@ -1,8 +1,9 @@
-<h2>One Time Password (OTP)</h2>
+<h2>Micro blog</h2>
+<h3>Sign In</h3>
 
 <div>
     <div>
-        {{ signInForm | json }}
+        <!-- {{ signInForm | json }} -->
     </div>
 
     <span>
