--- a/src/app/transaction-dashboard/containers/post-dashboard/post-dashboard.component.html
+++ b/src/app/transaction-dashboard/containers/post-dashboard/post-dashboard.component.html
@@ -7,20 +7,12 @@
 
     <div class="alert alert-dismissible alert-warning">
         <h4 class="alert-heading">Not developed yet.</h4>
-        <p class="mb-3">Multiple transactions reports are not developed yet. Please, go to:
+        <p class="mb-3">Blog posts module is not implemented yet. Please, go to:
             <a
                 href="{{ links.userHome }}"
                 class="card-link">
-                Single transaction operations
+                Users module
             </a>
         .</p>
     </div>
-
-    <!-- <transaction-detail
-        *ngFor="let transaction of transactions;"
-        [detail]="transaction"
-        (edit)="handleEdit($event)"
-        (view)="handleView($event)">
-
-    </transaction-detail> -->
 </div>
